# mempalace-gpu

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: apple_m1_results.md
integrations/openclaw/: SKILL.md
mempalace/: __init__.py  cli.py  config.py  convo_miner.py  embeddings.py  http_server.py  layers.py  mcp_proxy.py  mcp_server.py  miner.py  palace_graph.py  split_mega_files.py
tests/: test_cli.py  test_config.py  test_convo_miner.py  test_embeddings.py  test_mcp_server.py  test_miner.py  test_normalize.py
