[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mempalace-gpu"
version = "3.2.0"
description = "GPU-accelerated fork of mempalace — NVIDIA CUDA, AMD ROCm, Apple MPS. 3-6x faster mining."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "phobicdotno"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
    "gpu", "cuda", "rocm", "mps", "apple-silicon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/phobicdotno/mempalace-gpu"
Repository = "https://github.com/phobicdotno/mempalace-gpu"
"Bug Tracker" = "https://github.com/phobicdotno/mempalace-gpu/issues"
"Upstream" = "https://github.com/milla-jovovich/mempalace"

[tool.setuptools.packages.find]
include = ["mempalace*"]

[project.scripts]
mempalace-gpu = "mempalace:main"
mempalace = "mempalace:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]
# AMD ROCm: install torch with ROCm first, then pip install mempalace-gpu
# pip install torch --index-url https://download.pytorch.org/whl/rocm6.2

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
